[project]
name = "jkGlyphsHelpers"
dynamic = ["version"]
description = "Helper modules for GlyphsApp scripts."
readme = "README.md"
authors = [
    { name = "Jens Kutilek", email = "webmail@kutilek.de" }
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml >= 6.0.3",
]


[project.urls]
"Homepage" = "https://github.com/jenskutilek/jkGlyphsHelpers"
# "Documentation" = "https://jkglyphshelpers.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/jenskutilek/jkGlyphsHelpers/issues"
"Changelog" = "https://raw.githubusercontent.com/jenskutilek/jkGlyphsHelpers/refs/heads/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=82.0.0", "setuptools-scm[toml]>=9.2.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ["py310"]
